--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,11 @@
 <!doctype html>
 <html>
     <head>
+            <style type="text/css">
+                .error {
+                    color: red;
+                }
+            </style>
         <title>{{title}}</title>
     </head>
 <body>
